placeholder simple design

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 	  <title>Aaron's Website</title>
 	  <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width"></meta>
+	  <link rel="icon" type="image/png" href="images/chicken.png"></link>
 	</head>
 
 	<body>
