--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	  <title>Aaron's Website</title>
 	  <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width"></meta>
 	  <link rel="icon" type="image/png" href="images/chicken.png"></link>
+	  <link rel="stylesheet" type="text/css" href="styles/main.css"></link>
 	</head>
 
 	<body>
